--- a/task_manager.html
+++ b/task_manager.html
@@ -106,6 +106,14 @@
         .status-modal.active {
             bottom: 0;
         }
+        /* Smooth horizontal scrolling for mobile kanban */
+        #kanbanBoard {
+            -webkit-overflow-scrolling: touch;
+            scroll-snap-type: x proximity;
+        }
+        #kanbanBoard > div {
+            scroll-snap-align: start;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -280,11 +288,11 @@
         </div>
 
         <!-- Kanban Board Columns -->
-        <div id="kanbanBoard" class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div id="kanbanBoard" class="flex gap-4 overflow-x-auto pb-4 md:grid md:grid-cols-3 md:gap-6 md:overflow-x-visible">
 
             <!-- TO DO Column -->
-            <div class="bg-gray-100 rounded-xl p-4 shadow-inner">
-                <h2 class="text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-indigo-500 flex justify-between items-center">
+            <div class="bg-gray-100 rounded-xl p-4 shadow-inner flex-shrink-0 w-72 md:w-auto">
+                <h2 class="text-lg md:text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-indigo-500 flex justify-between items-center">
                     To Do <span id="todoCount" class="text-sm bg-indigo-100 text-indigo-700 px-2 py-0.5 rounded-full font-medium">0</span>
                 </h2>
                 <div 
@@ -296,8 +304,8 @@
             </div>
 
             <!-- IN PROGRESS Column -->
-            <div class="bg-gray-100 rounded-xl p-4 shadow-inner">
-                <h2 class="text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-yellow-500 flex justify-between items-center">
+            <div class="bg-gray-100 rounded-xl p-4 shadow-inner flex-shrink-0 w-72 md:w-auto">
+                <h2 class="text-lg md:text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-yellow-500 flex justify-between items-center">
                     In Progress <span id="inProgressCount" class="text-sm bg-yellow-100 text-yellow-700 px-2 py-0.5 rounded-full font-medium">0</span>
                 </h2>
                 <div 
@@ -308,8 +316,8 @@
             </div>
 
             <!-- DONE Column -->
-            <div class="bg-gray-100 rounded-xl p-4 shadow-inner">
-                <h2 class="text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-green-500 flex justify-between items-center">
+            <div class="bg-gray-100 rounded-xl p-4 shadow-inner flex-shrink-0 w-72 md:w-auto">
+                <h2 class="text-lg md:text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-green-500 flex justify-between items-center">
                     Done <span id="doneCount" class="text-sm bg-green-100 text-green-700 px-2 py-0.5 rounded-full font-medium">0</span>
                 </h2>
                 <div 
