--- a/task_manager.html
+++ b/task_manager.html
@@ -106,6 +106,29 @@
         .status-modal.active {
             bottom: 0;
         }
+        /* Add Task Modal */
+        .add-task-modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.9);
+            width: 90%;
+            max-width: 500px;
+            background-color: white;
+            z-index: 60;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+            border-radius: 16px;
+            max-height: 90vh;
+            overflow-y: auto;
+        }
+        .add-task-modal.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translate(-50%, -50%) scale(1);
+        }
         /* Smooth horizontal scrolling for mobile kanban */
         #kanbanBoard {
             -webkit-overflow-scrolling: touch;
@@ -170,6 +193,93 @@
                         <span class="font-semibold text-gray-800">Done</span>
                     </div>
                     <svg class="w-5 h-5 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Task Modal -->
+    <div id="addTaskModal" class="add-task-modal">
+        <div class="p-6 space-y-4">
+            <!-- Modal Header -->
+            <div class="flex items-center justify-between border-b pb-4">
+                <h3 class="text-xl font-bold text-gray-900">Create New Task</h3>
+                <button onclick="window.closeAddTaskModal()" class="p-2 rounded-lg hover:bg-gray-100 transition duration-150">
+                    <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                </button>
+            </div>
+
+            <!-- Task Form -->
+            <div class="space-y-4">
+                <!-- Task Name -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Task Name *</label>
+                    <input 
+                        id="modalTaskInput" 
+                        type="text" 
+                        placeholder="Enter task description..."
+                        class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 shadow-sm transition duration-150"
+                    >
+                </div>
+
+                <!-- Priority -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Priority</label>
+                    <select id="modalTaskPriority" class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <option value="Medium">Medium</option>
+                        <option value="High">High</option>
+                        <option value="Low">Low</option>
+                    </select>
+                </div>
+
+                <!-- Due Date -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Due Date</label>
+                    <input 
+                        id="modalTaskDueDate" 
+                        type="date" 
+                        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
+                    >
+                </div>
+
+                <!-- Tags -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Tags (optional)</label>
+                    <input 
+                        id="modalTaskTags" 
+                        type="text" 
+                        placeholder="e.g., work, personal, urgent"
+                        class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 shadow-sm transition duration-150"
+                    >
+                    <p class="text-xs text-gray-500 mt-1">Separate tags with commas</p>
+                </div>
+
+                <!-- Notes -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Notes (optional)</label>
+                    <textarea 
+                        id="modalTaskNotes" 
+                        rows="3"
+                        placeholder="Add any additional notes or details..."
+                        class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 shadow-sm transition duration-150 resize-none"
+                    ></textarea>
+                </div>
+            </div>
+
+            <!-- Action Buttons -->
+            <div class="flex space-x-3 pt-4 border-t">
+                <button 
+                    onclick="window.closeAddTaskModal()"
+                    class="flex-1 px-4 py-3 rounded-lg font-medium transition duration-150 bg-gray-100 text-gray-700 hover:bg-gray-200 active:scale-95"
+                >
+                    Cancel
+                </button>
+                <button 
+                    onclick="window.saveNewTask()"
+                    class="flex-1 px-4 py-3 rounded-lg font-medium transition duration-150 bg-indigo-600 text-white hover:bg-indigo-700 active:scale-95 flex items-center justify-center space-x-2"
+                >
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                    <span>Save Task</span>
                 </button>
             </div>
         </div>
@@ -253,48 +363,24 @@
             </div>
         </header>
 
-        <!-- New Task Input Form -->
-        <div class="space-y-3 mb-6 p-4 bg-white rounded-xl shadow-lg">
-            <input 
-                id="taskInput" 
-                type="text" 
-                placeholder="Enter new task description..."
-                class="w-full p-3 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500 shadow-sm transition duration-150"
-                onkeypress="if(event.key === 'Enter') document.getElementById('addTaskBtn').click()"
-            >
-            <!-- Start Mobile Optimization: Stacks inputs vertically on small screens -->
-            <div class="flex flex-col space-y-3 sm:flex-row sm:space-x-3 sm:space-y-0">
-                <select id="taskPriority" class="p-3 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 flex-1 min-w-0">
-                    <option value="Medium">Priority: Medium</option>
-                    <option value="High" class="text-red-600 font-medium">Priority: High</option>
-                    <option value="Low" class="text-green-600">Priority: Low</option>
-                </select>
-                <input 
-                    id="taskDueDate" 
-                    type="date" 
-                    class="p-3 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 flex-1 min-w-0"
-                >
-                <button 
-                    id="addTaskBtn"
-                    onclick="window.addTask()"
-                    class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-3 px-4 rounded-lg shadow-md transition duration-150 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 flex items-center justify-center sm:w-auto w-full"
-                    title="Add Task"
-                >
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path></svg>
-                    <span class="ml-2 sm:hidden">Add Task</span>
-                </button>
-            </div>
-            <!-- End Mobile Optimization -->
-        </div>
-
         <!-- Kanban Board Columns -->
         <div id="kanbanBoard" class="flex gap-4 overflow-x-auto pb-4 md:grid md:grid-cols-3 md:gap-6 md:overflow-x-visible">
 
             <!-- TO DO Column -->
             <div class="bg-gray-100 rounded-xl p-4 shadow-inner flex-shrink-0 w-72 md:w-auto">
-                <h2 class="text-lg md:text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-indigo-500 flex justify-between items-center">
-                    To Do <span id="todoCount" class="text-sm bg-indigo-100 text-indigo-700 px-2 py-0.5 rounded-full font-medium">0</span>
-                </h2>
+                <div class="flex items-center justify-between mb-4 pb-2 border-b-2 border-indigo-500">
+                    <div class="flex items-center space-x-2">
+                        <h2 class="text-lg md:text-xl font-bold text-gray-800">To Do</h2>
+                        <span id="todoCount" class="text-sm bg-indigo-100 text-indigo-700 px-2 py-0.5 rounded-full font-medium">0</span>
+                    </div>
+                    <button 
+                        onclick="window.openAddTaskModal()"
+                        class="p-2 rounded-lg bg-indigo-600 text-white hover:bg-indigo-700 transition duration-150 active:scale-95"
+                        title="Add New Task"
+                    >
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path></svg>
+                    </button>
+                </div>
                 <div 
                     id="todoColumn" 
                     class="kanban-column-body space-y-4"
@@ -406,7 +492,7 @@
         /**
          * Calculates and sets the default due date to one week from today.
          */
-        function setInitialDueDate() {
+        function setInitialDueDate(elementId = 'taskDueDate') {
             const today = new Date();
             const oneWeekFromNow = new Date(today);
             oneWeekFromNow.setDate(today.getDate() + 7);
@@ -416,7 +502,7 @@
             const month = String(oneWeekFromNow.getMonth() + 1).padStart(2, '0');
             const day = String(oneWeekFromNow.getDate()).padStart(2, '0');
 
-            const dueDateInput = document.getElementById('taskDueDate');
+            const dueDateInput = document.getElementById(elementId);
             if (dueDateInput) {
                 dueDateInput.value = `${year}-${month}-${day}`;
             }
@@ -513,7 +599,7 @@
 
         window.closeStatusModal = function() {
             document.getElementById('statusModal').classList.remove('active');
-            if (!document.getElementById('sideMenu').classList.contains('active')) {
+            if (!document.getElementById('sideMenu').classList.contains('active') && !document.getElementById('addTaskModal').classList.contains('active')) {
                 document.getElementById('menuOverlay').classList.remove('active');
             }
             currentTaskForStatusChange = null;
@@ -532,6 +618,82 @@
             await window.updateTaskStatus(id, newStatus);
             closeStatusModal();
             showMessage(`Task moved to ${newStatus.replace('-', ' ')}`, 'success');
+        }
+
+        // --------------------------------------------------------
+        // ADD TASK MODAL
+        // --------------------------------------------------------
+
+        window.openAddTaskModal = function() {
+            // Set default due date
+            setInitialDueDate('modalTaskDueDate');
+            document.getElementById('addTaskModal').classList.add('active');
+            document.getElementById('menuOverlay').classList.add('active');
+            // Focus on task input
+            setTimeout(() => {
+                document.getElementById('modalTaskInput').focus();
+            }, 100);
+        }
+
+        window.closeAddTaskModal = function() {
+            document.getElementById('addTaskModal').classList.remove('active');
+            if (!document.getElementById('sideMenu').classList.contains('active') && !document.getElementById('statusModal').classList.contains('active')) {
+                document.getElementById('menuOverlay').classList.remove('active');
+            }
+            // Clear form
+            document.getElementById('modalTaskInput').value = '';
+            document.getElementById('modalTaskPriority').value = 'Medium';
+            document.getElementById('modalTaskTags').value = '';
+            document.getElementById('modalTaskNotes').value = '';
+        }
+
+        window.saveNewTask = async function() {
+            if (!isAuthReady) {
+                showMessage("Authentication not ready. Please wait.", 'info');
+                return;
+            }
+            
+            const description = document.getElementById('modalTaskInput').value.trim();
+            const priority = document.getElementById('modalTaskPriority').value;
+            const dueDate = document.getElementById('modalTaskDueDate').value || null;
+            const tags = document.getElementById('modalTaskTags').value.trim();
+            const notes = document.getElementById('modalTaskNotes').value.trim();
+
+            if (!description) {
+                showMessage("Please enter a task name.", 'info');
+                document.getElementById('modalTaskInput').focus();
+                return;
+            }
+
+            try {
+                const tasksColRef = getTasksCollectionRef();
+                if (!tasksColRef) return;
+
+                const taskData = {
+                    description: description,
+                    status: 'todo',
+                    priority: priority,
+                    dueDate: dueDate,
+                    createdAt: Date.now(),
+                    createdBy: userId
+                };
+
+                // Add optional fields if they exist
+                if (tags) {
+                    taskData.tags = tags.split(',').map(tag => tag.trim()).filter(tag => tag);
+                }
+                if (notes) {
+                    taskData.notes = notes;
+                }
+
+                await addDoc(tasksColRef, taskData);
+                
+                closeAddTaskModal();
+                showMessage("Task added successfully!", 'success');
+            } catch (e) {
+                console.error("Error adding document: ", e);
+                showMessage("Error adding task. See console.", 'error');
+            }
         }
 
         // --------------------------------------------------------
@@ -576,49 +738,6 @@
         // --------------------------------------------------------
         // CRUD OPERATIONS
         // --------------------------------------------------------
-
-        window.addTask = async function() {
-            if (!isAuthReady) {
-                showMessage("Authentication not ready. Please wait.", 'info');
-                return;
-            }
-            const input = document.getElementById('taskInput');
-            const prioritySelect = document.getElementById('taskPriority');
-            const dueDateInput = document.getElementById('taskDueDate');
-
-            const description = input.value.trim();
-            const priority = prioritySelect.value;
-            const dueDate = dueDateInput.value || null; // Store null if empty
-
-            if (!description) {
-                showMessage("Please enter a task description.", 'info');
-                return;
-            }
-
-            try {
-                const tasksColRef = getTasksCollectionRef();
-                if (!tasksColRef) return;
-
-                await addDoc(tasksColRef, {
-                    description: description,
-                    status: 'todo', // Default status for new tasks
-                    priority: priority,
-                    dueDate: dueDate,
-                    createdAt: Date.now(), 
-                    // Keeping userId for tracking who created the task, even on a public board
-                    createdBy: userId 
-                });
-
-                input.value = ''; // Clear description
-                prioritySelect.value = 'Medium'; // Reset priority
-                // Re-set the default date after adding a task
-                setInitialDueDate(); 
-                showMessage("Task added successfully!", 'success');
-            } catch (e) {
-                console.error("Error adding document: ", e);
-                showMessage("Error adding task. See console.", 'error');
-            }
-        }
 
         window.updateTaskStatus = async function(taskId, newStatus) {
             if (!isAuthReady) return;
