--- a/task_manager.html
+++ b/task_manager.html
@@ -141,6 +141,29 @@
             visibility: visible;
             transform: translate(-50%, -50%) scale(1);
         }
+        /* User Guide Modal */
+        .guide-modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.9);
+            width: 90%;
+            max-width: 600px;
+            background-color: white;
+            z-index: 60;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+            border-radius: 16px;
+            max-height: 90vh;
+            overflow-y: auto;
+        }
+        .guide-modal.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translate(-50%, -50%) scale(1);
+        }
         /* Smooth horizontal scrolling for mobile kanban */
         #kanbanBoard {
             -webkit-overflow-scrolling: touch;
@@ -297,6 +320,104 @@
         </div>
     </div>
 
+    <!-- User Guide Modal -->
+    <div id="guideModal" class="guide-modal">
+        <div class="p-6 space-y-4">
+            <!-- Modal Header -->
+            <div class="flex items-center justify-between border-b pb-4">
+                <div class="flex items-center space-x-2">
+                    <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
+                    <h3 class="text-xl font-bold text-gray-900">User Guide</h3>
+                </div>
+                <button onclick="window.closeGuideModal()" class="p-2 rounded-lg hover:bg-gray-100 transition duration-150">
+                    <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                </button>
+            </div>
+
+            <!-- Guide Content -->
+            <div class="space-y-4 text-gray-700">
+                <!-- Getting Started -->
+                <div>
+                    <h4 class="text-lg font-bold text-gray-900 mb-2 flex items-center space-x-2">
+                        <span class="bg-indigo-100 text-indigo-600 w-6 h-6 rounded-full flex items-center justify-center text-sm font-bold">1</span>
+                        <span>Getting Started</span>
+                    </h4>
+                    <p class="text-sm ml-8">Welcome to Kanban Task Manager! Organize your tasks across three columns: <strong>To Do</strong>, <strong>In Progress</strong>, and <strong>Done</strong>.</p>
+                </div>
+
+                <!-- Creating Tasks -->
+                <div>
+                    <h4 class="text-lg font-bold text-gray-900 mb-2 flex items-center space-x-2">
+                        <span class="bg-indigo-100 text-indigo-600 w-6 h-6 rounded-full flex items-center justify-center text-sm font-bold">2</span>
+                        <span>Creating Tasks</span>
+                    </h4>
+                    <ul class="text-sm ml-8 space-y-1 list-disc list-inside">
+                        <li>Click the <strong>+</strong> button in the <strong>To Do</strong> column</li>
+                        <li>Enter task name (required)</li>
+                        <li>Set priority: High, Medium, or Low</li>
+                        <li>Choose a due date</li>
+                        <li>Add optional tags and notes</li>
+                        <li>Click <strong>Save Task</strong></li>
+                    </ul>
+                </div>
+
+                <!-- Moving Tasks -->
+                <div>
+                    <h4 class="text-lg font-bold text-gray-900 mb-2 flex items-center space-x-2">
+                        <span class="bg-indigo-100 text-indigo-600 w-6 h-6 rounded-full flex items-center justify-center text-sm font-bold">3</span>
+                        <span>Moving Tasks</span>
+                    </h4>
+                    <ul class="text-sm ml-8 space-y-1 list-disc list-inside">
+                        <li>Tap any task card to open status options</li>
+                        <li>Choose: To Do, In Progress, or Done</li>
+                        <li>Task will instantly move to the selected column</li>
+                    </ul>
+                </div>
+
+                <!-- Deleting Tasks -->
+                <div>
+                    <h4 class="text-lg font-bold text-gray-900 mb-2 flex items-center space-x-2">
+                        <span class="bg-indigo-100 text-indigo-600 w-6 h-6 rounded-full flex items-center justify-center text-sm font-bold">4</span>
+                        <span>Deleting Tasks</span>
+                    </h4>
+                    <p class="text-sm ml-8">Click the <strong class="text-red-600">trash icon</strong> on any task card to permanently delete it.</p>
+                </div>
+
+                <!-- Board Modes -->
+                <div>
+                    <h4 class="text-lg font-bold text-gray-900 mb-2 flex items-center space-x-2">
+                        <span class="bg-indigo-100 text-indigo-600 w-6 h-6 rounded-full flex items-center justify-center text-sm font-bold">5</span>
+                        <span>Board Modes</span>
+                    </h4>
+                    <ul class="text-sm ml-8 space-y-1">
+                        <li><strong>Personal Board:</strong> Only you can see your tasks</li>
+                        <li><strong>Shared Board:</strong> Tasks are visible to all users</li>
+                        <li>Switch modes from the menu (☰ icon)</li>
+                    </ul>
+                </div>
+
+                <!-- Mobile Tips -->
+                <div class="bg-blue-50 p-3 rounded-lg border border-blue-200">
+                    <h4 class="text-sm font-bold text-blue-900 mb-1 flex items-center space-x-2">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                        <span>Mobile Tip</span>
+                    </h4>
+                    <p class="text-xs text-blue-800">Swipe left and right to view all three columns on your phone!</p>
+                </div>
+            </div>
+
+            <!-- Close Button -->
+            <div class="pt-4 border-t">
+                <button 
+                    onclick="window.closeGuideModal()"
+                    class="w-full px-4 py-3 rounded-lg font-medium transition duration-150 bg-indigo-600 text-white hover:bg-indigo-700 active:scale-95"
+                >
+                    Got it!
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- Side Menu -->
     <div id="sideMenu" class="side-menu">
         <div class="p-6 space-y-6">
@@ -350,6 +471,17 @@
                     </button>
                 </div>
                 <p class="text-xs text-gray-500 mt-2">• Personal: Only you can see your tasks<br>• Shared: Tasks are visible to all users</p>
+            </div>
+
+            <!-- User Guide Button -->
+            <div class="pt-4 border-t">
+                <button 
+                    onclick="window.openGuideModal()"
+                    class="w-full px-4 py-3 rounded-lg font-medium transition duration-150 bg-gradient-to-r from-indigo-500 to-purple-600 text-white hover:from-indigo-600 hover:to-purple-700 active:scale-95 flex items-center justify-center space-x-2 shadow-md"
+                >
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
+                    <span>User Guide</span>
+                </button>
             </div>
         </div>
     </div>
@@ -657,6 +789,26 @@
             document.getElementById('modalTaskPriority').value = 'Medium';
             document.getElementById('modalTaskTags').value = '';
             document.getElementById('modalTaskNotes').value = '';
+        }
+
+        // --------------------------------------------------------
+        // USER GUIDE MODAL
+        // --------------------------------------------------------
+
+        window.openGuideModal = function() {
+            document.getElementById('guideModal').classList.add('active');
+            document.getElementById('menuOverlay').classList.add('active');
+            // Close side menu when opening guide
+            document.getElementById('sideMenu').classList.remove('active');
+        }
+
+        window.closeGuideModal = function() {
+            document.getElementById('guideModal').classList.remove('active');
+            if (!document.getElementById('sideMenu').classList.contains('active') && 
+                !document.getElementById('statusModal').classList.contains('active') &&
+                !document.getElementById('addTaskModal').classList.contains('active')) {
+                document.getElementById('menuOverlay').classList.remove('active');
+            }
         }
 
         window.saveNewTask = async function() {
