--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
                     </div>
                 </div>
 
-                <div class="mt-4 pt-4 border-t flex justify-end">
+                <div class="mt-4 pt-4 border-t flex justify-between">
+                    <button onclick="saveAndCloseManageClassesModal()" class="px-6 py-2 bg-green-600 text-white rounded-lg font-semibold hover:bg-green-700 transition">
+                        💾 Save & Close
+                    </button>
                     <button onclick="closeManageClassesModal()" class="px-6 py-2 bg-gray-500 text-white rounded-lg font-semibold hover:bg-gray-600 transition">
                         Close
                     </button>
@@ -939,6 +942,20 @@ const fetchAndRenderLogHistory = (classId) => {
         };
 
         /**
+         * Saves changes and closes the manage classes modal
+         */
+        window.saveAndCloseManageClassesModal = async () => {
+            try {
+                await saveClassDefinitions();
+                showMessage('Success', 'All changes have been saved!');
+                document.getElementById('manage-classes-modal').classList.add('hidden');
+            } catch (error) {
+                console.error('Error saving:', error);
+                showMessage('Error', 'Failed to save changes. Please try again.');
+            }
+        };
+
+        /**
          * Renders the list of current classes in the modal
          */
         const renderCurrentClassesList = () => {
@@ -1264,18 +1281,20 @@ const fetchAndRenderLogHistory = (classId) => {
             // 2. Render the footer buttons (Save/Close)
             const footerContainer = document.getElementById('modal-footer');
             footerContainer.innerHTML = `
-                <button id="save-report-btn" onclick="saveReport('${classId}')" 
-                        class="flex items-center justify-center bg-indigo-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-indigo-700 transition duration-150 shadow-md mr-2 w-full max-w-[200px] disabled:opacity-50 disabled:cursor-not-allowed">
-                    <svg id="save-spinner" class="animate-spin-slow h-5 w-5 text-white mr-3 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                    </svg>
-                    <span id="save-button-text">Save and Close Report</span>
-                </button>
-                <button onclick="closeModal()" 
-                        class="bg-gray-300 text-gray-700 px-4 py-2 rounded-lg font-semibold hover:bg-gray-400 transition duration-150 shadow-md w-full max-w-[200px]">
-                    Cancel
-                </button>
+                <div class="flex justify-between w-full gap-3">
+                    <button id="save-report-btn" onclick="saveReport('${classId}')" 
+                            class="flex items-center justify-center bg-green-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-green-700 transition duration-150 shadow-md flex-1 disabled:opacity-50 disabled:cursor-not-allowed">
+                        <svg id="save-spinner" class="animate-spin-slow h-5 w-5 text-white mr-3 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                        </svg>
+                        <span id="save-button-text">💾 Save</span>
+                    </button>
+                    <button onclick="closeModal()" 
+                            class="bg-gray-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-gray-600 transition duration-150 shadow-md flex-1">
+                        Close
+                    </button>
+                </div>
             `;
 
             // 3. Show the modal
@@ -1379,7 +1398,7 @@ const fetchAndRenderLogHistory = (classId) => {
             } finally {
                 isSaving = false;
                 saveButton.disabled = false;
-                buttonText.textContent = 'Save and Close Report';
+                buttonText.textContent = '💾 Save';
                 spinner.classList.add('hidden');
             }
         };
@@ -1925,13 +1944,18 @@ const renderClassList = () => {
             const modalFooter = document.getElementById('modal-footer');
             if (isEditable) {
                 modalFooter.innerHTML = `
-                    <button id="modal-save-button" onclick="saveClassReport()" class="w-full px-4 py-2 bg-indigo-600 text-white rounded-lg font-semibold shadow-md hover:bg-indigo-700 transition duration-150 ease-in-out disabled:opacity-50 flex items-center justify-center" disabled>
-                        <span id="modal-save-button-text">Save and Close Report</span>
-                        <svg id="modal-save-spinner" class="animate-spin-slow h-5 w-5 text-white ml-2 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                        </svg>
-                    </button>
+                    <div class="flex gap-3">
+                        <button id="modal-save-button" onclick="saveClassReport()" class="flex-1 px-4 py-2 bg-green-600 text-white rounded-lg font-semibold shadow-md hover:bg-green-700 transition duration-150 ease-in-out disabled:opacity-50 flex items-center justify-center" disabled>
+                            <span id="modal-save-button-text">💾 Save</span>
+                            <svg id="modal-save-spinner" class="animate-spin-slow h-5 w-5 text-white ml-2 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                            </svg>
+                        </button>
+                        <button onclick="closeModal()" class="flex-1 px-4 py-2 bg-gray-500 text-white rounded-lg font-semibold shadow-md hover:bg-gray-600 transition duration-150 ease-in-out">
+                            Close
+                        </button>
+                    </div>
                 `;
             } else {
                  modalFooter.innerHTML = `
@@ -2090,7 +2114,7 @@ window.saveClassReport = async () => {
         showMessage('Save Failed', `Cannot save report for ${classId}. Please enter the total number of students.`);
         isSaving = false;
         saveButton.disabled = false;
-        buttonText.textContent = 'Save and Close Report';
+        buttonText.textContent = '💾 Save';
         spinner.classList.add('hidden');
         return;
     }
@@ -2201,7 +2225,7 @@ window.saveClassReport = async () => {
     } finally {
         isSaving = false;
         saveButton.disabled = false;
-        buttonText.textContent = 'Save and Close Report';
+        buttonText.textContent = '💾 Save';
         spinner.classList.add('hidden');
     }
 };
