feat: Update header titles with emojis for better visual appeal

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </button>
         
         <h1 class="text-xl font-extrabold text-indigo-700 flex-grow text-center sm:text-left">
-            Tracker
+            📚 Attendance Tracker
         </h1>
 
         <nav class="hidden sm:hidden items-center space-x-3 mx-4">
@@ -99,7 +99,7 @@
             
             <div id="menu-item-dashboard" class="flex items-center gap-2">
                 <a href="dashboard.html" class="flex-1 px-3 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 font-semibold shadow-md">
-                    Dashboard
+                    📊 Dashboard
                 </a>
                 <button id="toggle-dashboard-btn" onclick="toggleMenuItemVisibility('dashboard')" class="hidden px-2 py-2 text-gray-600 hover:text-indigo-600" title="Toggle visibility">
                     <span id="eye-dashboard">👁️</span>
