--- a/dashboard.html
+++ b/dashboard.html
@@ -60,8 +60,8 @@
             </svg>
         </button>
         
-        <h1 class="text-xl font-extrabold text-indigo-700 flex-grow text-center sm:text-left">
-            <span class="mr-1">📊</span> Dashboard
+        <h1 class="text-xs font-extrabold text-indigo-700 flex-grow text-center sm:text-left">
+            📊 Dashboard
         </h1>
         
         <div class="flex items-center space-x-2 flex-shrink-0">
