--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </svg>
         </button>
         
-        <h1 class="text-xl font-extrabold text-indigo-700 flex-grow text-center sm:text-left">
+        <h1 class="text-xs font-extrabold text-indigo-700 flex-grow text-center sm:text-left">
             📚 Attendance Tracker
         </h1>
 
